
===========
Changes log
===========


@version-full@ (@release-date@)
    - Bugs fixed
       - Invalid max-age value for cookie settings replaced by Integer.MAX_VALUE constant. Issue #1251.
         Reported by Chad Gatesman.
       - Fixed parsing of If-Match header in case it contains an invalid tag . Issue #1258.
         Reported by Guillaume Blondeau.
    - Enhancements
       - Add literal conversion support for the Boolean, Byte, Int16, Int32, Int64, Decimal, Single and Double 
         Edm types in the OData extension.
         Reported and contributed by Serge Sozonoff.

- 2.3.9 (12/19/2016)
    - Bugs fixed
       - In IE 10 and seq., request without body are sent with an "undefined" body. Issue #1252.
         Reported by Etienne Griette.
       - Fixed potential NPE when a queue returns null in PipeStream. Issue #1246.
         Reported and contributed by Grégoire Juge. 

- 2.3.8 (12/10/2016)
    - Bugs fixed
       - Fixed NullPointerException when requesting a Directory with a query string. Issue #1206.
         Reported by Ralph van Etten.
       - Fixed support of non-bytes ranges. Issue #1132.
       - Fixed encoding issue when using CookieAuthenticator. Issue #1159.
         Reported by Arjohn Kampman.
       - Added support of 'Access-Control-Max-Age'. Issue #1109.
         Reported by Tal Liron.
       - Fixed potential NullPointerException when copying Servlet's request attributes.
         Reported and contributed by Colin Puy.
       - Fixed computation of the agent name in case Safari browser. Issue #1238.
         Reported by Abhishek Nandi.
       - Fixed potential dead lock when compating two instances of WrapperList. Issue #1243.
         Contributed by Tim Peierls.
    - Enhancements
       - Added overload to OAuthParameters.toReference which accepts an existing Reference.
         Contributed by Ryan O'Meara.

- 2.3.7 (03/14/2016)
    - Bugs fixed